--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sleeper Multi-League Hub</title>
+<title>My Fantasy Agent</title>
 <style>
   :root{
     --bg:#0b1020; --panel:#121a35; --muted:#6b7aa6; --text:#e8ecff; --accent:#5ee0ff; --accent2:#84ffb5; --warn:#ffd166;
@@ -28,17 +28,14 @@
   label{display:block;margin:4px 0 4px;color:var(--muted);font-weight:600}
   input,select,button{background:#0e1630;color:var(--text);border:1px solid var(--border);border-radius:10px;padding:9px 10px}
   input,select{width:100%}
-  #username{font-size:16px} /* wider + bigger text */
+  #username{font-size:16px}
   button{cursor:pointer;transition:.2s;white-space:nowrap}
   button:hover{transform:translateY(-1px);box-shadow:0 6px 18px rgba(0,0,0,.25)}
   .row-2{display:grid;grid-template-columns:1fr 110px;gap:8px;margin-top:6px}
   .nav-head{font-size:12px;color:#8fa1ff99;margin:12px 0 6px}
-
   .league-list{display:flex;flex-direction:column;gap:6px;overflow:auto}
-  .league-item,
-  .summary-item{display:flex;gap:8px;align-items:center;padding:8px;border:1px solid var(--border);border-radius:10px;background:#0e1734;cursor:pointer}
-  .league-item.active,
-  .summary-item.active{outline:2px solid var(--accent)}
+  .league-item, .summary-item{display:flex;gap:8px;align-items:center;padding:8px;border:1px solid var(--border);border-radius:10px;background:#0e1734;cursor:pointer}
+  .league-item.active, .summary-item.active{outline:2px solid var(--accent)}
   .li-title{font-weight:600}
   .li-sub{font-size:12px;color:#8fa1ff99}
 
@@ -69,17 +66,17 @@
 </style>
 </head>
 <body>
-<header><h1>🏈 Sleeper Multi-League Hub</h1></header>
+<header><h1>My Fantasy Agent</h1></header>
 
 <div class="layout">
   <aside>
-    <div id="status" class="status">Enter your Sleeper username, choose a season (center controls), and click <b>View Leagues</b>.</div>
+    <div id="status" class="status">Enter your Sleeper username, choose a season (center), and click <b>View Leagues</b>.</div>
 
     <!-- Username + View -->
     <div class="inputs">
       <div>
         <label for="username">Sleeper Username</label>
-        <input id="username" placeholder="e.g. AryanShah" />
+        <input id="username" placeholder="" />
       </div>
       <div style="align-self:end; display:flex; gap:8px; justify-content:flex-end">
         <button id="viewLeaguesBtn" disabled>View Leagues</button>
@@ -102,22 +99,20 @@
 
     <div class="nav-head">Your Leagues</div>
     <div id="leagueList" class="league-list"></div>
-
-    <div class="note">Tip: run via a tiny local server if your browser blocks API calls from a file. <code>python -m http.server</code></div>
   </aside>
 
   <div class="main">
     <!-- center controls: context + season + week -->
     <div class="controls">
       <div class="group" style="min-width:260px">
-        <div class="note" id="contextNote">No data loaded.</div>
+        <div class="note" id="contextNote"></div>
       </div>
 
       <div class="group hidden" id="seasonGroup">
         <label for="seasonMain">Season</label>
         <select id="seasonMain">
-          <option value="2025">2025</option>
-          <option value="2024" selected>2024</option>
+          <option value="2025" selected>2025</option>
+          <option value="2024">2024</option>
         </select>
       </div>
 
@@ -141,25 +136,27 @@
       </div>
     </div>
 
-    <!-- PER-LEAGUE TABS -->
-    <div class="tabs hidden" id="leagueTabs">
-      <button class="tab-btn active" data-tab="tab-roster">My Roster</button>
-      <button class="tab-btn" data-tab="tab-pos">Team Projections</button>
-      <button class="tab-btn" data-tab="tab-matchup">Opponent Projections</button>
-      <button class="tab-btn" data-tab="tab-byes">Bye Week Matrix</button>
-    </div>
+    <!-- LEAGUE VIEWS (tabs + sections wrapped so we can hide all on summary) -->
+    <div id="leagueViews" class="hidden">
+      <div class="tabs" id="leagueTabs">
+        <button class="tab-btn active" data-tab="tab-roster">My Roster</button>
+        <button class="tab-btn" data-tab="tab-pos">Team Projections</button>
+        <button class="tab-btn" data-tab="tab-matchup">Opponent Projections</button>
+        <button class="tab-btn" data-tab="tab-byes">Bye Week Matrix</button>
+      </div>
 
-    <div class="sections">
-      <section id="tab-roster" class="active"><div id="rosterTable"></div></section>
-      <section id="tab-pos"><div id="posTable"></div></section>
-      <section id="tab-matchup">
-        <div id="matchupSummary"></div>
-        <div class="row" style="margin-top:8px">
-          <div id="myStarters"></div>
-          <div id="oppStarters"></div>
-        </div>
-      </section>
-      <section id="tab-byes"><div id="byeMatrix"></div></section>
+      <div class="sections" id="leagueSections">
+        <section id="tab-roster" class="active"><div id="rosterTable"></div></section>
+        <section id="tab-pos"><div id="posTable"></div></section>
+        <section id="tab-matchup">
+          <div id="matchupSummary"></div>
+          <div class="row" style="margin-top:8px">
+            <div id="myStarters"></div>
+            <div id="oppStarters"></div>
+          </div>
+        </section>
+        <section id="tab-byes"><div id="byeMatrix"></div></section>
+      </div>
     </div>
 
     <footer>Uses public Sleeper API + Rotowire projections via Sleeper. Data cached for ~3h in localStorage.</footer>
@@ -242,7 +239,7 @@ function age(meta){ if(meta?.age!=null){ const n=+meta.age; if(Number.isFinite(n
 const BYE_2025={ATL:5,CHI:5,GB:5,PIT:5,HOU:6,MIN:6,BAL:7,BUF:7,ARI:8,DET:8,JAX:8,LV:8,LAR:8,SEA:8,CLE:9,NYJ:9,PHI:9,TB:9,CIN:10,DAL:10,KC:10,TEN:10,IND:11,NO:11,DEN:12,LAC:12,MIA:12,WAS:12,CAR:14,NE:14,NYG:14,SF:14};
 function teamBye(team, season){ return season==2025 ? BYE_2025[team] : null }
 
-/* ===== Rendering: generic tables ===== */
+/* ===== Tables ===== */
 function renderStatus(kind, msg){ const s=$('#status'); s.className='status '+(kind||''); s.innerHTML=msg; }
 function renderTable(container, headers, rows){
   const table=el('table'), thead=el('thead'), tbody=el('tbody');
@@ -303,23 +300,20 @@ function renderBye(container, {order,weeks,matrix}){ const headers=['Pos',...wee
 
 /* ===== USER SUMMARY (cross-league) ===== */
 function exposuresAcrossLeagues(leagues, userId, players){
-  // return array [{pid, name, pos, team, count}] for players on user's rosters across leagues
   const counter = new Map();
   for(const {rosters} of Object.values(leagues)){
     const my = rosters.find(r=>r.owner_id===userId); if(!my) continue;
-    for(const pid of rosterPids(my)){
-      const n = counter.get(pid)||0; counter.set(pid, n+1);
-    }
+    for(const pid of rosterPids(my)){ counter.set(pid, (counter.get(pid)||0)+1); }
   }
   const rows=[];
   for(const [pid,count] of counter.entries()){
+    if(count<2) continue;
     const m=players[pid]||{}; const name=m.full_name||(m.first_name&&m.last_name?`${m.first_name} ${m.last_name}`:(m.last_name||'Unknown'));
     rows.push({pid, name, pos:(m.position||'UNK').toUpperCase(), team:m.team||'FA', count});
   }
-  return rows.filter(r=>r.count>=2).sort((a,b)=> b.count-a.count || a.name.localeCompare(b.name));
+  return rows.sort((a,b)=> b.count-a.count || a.name.localeCompare(b.name));
 }
 async function userSummaryProjections(leagues, players, week){
-  // returns rows: [League, My Team, My Proj, Opponent, Opp Proj]
   const rows=[];
   await Promise.all(Object.values(leagues).map(async entry=>{
     const {league, users, rosters} = entry;
@@ -327,14 +321,11 @@ async function userSummaryProjections(leagues, players, week){
     const myRoster = rosters.find(r=>r.owner_id===g.userId); if(!myRoster) return;
     const myUser = users.find(u=>u.user_id===myRoster.owner_id) || {};
     const myTeamName=(myUser.metadata?.team_name)||myUser.display_name||`Team ${myRoster.roster_id}`;
-
     const proj = await projByPid(season, week, 'regular', players, scoring);
     const projFn = pid => proj[String(pid)]||0;
-
     const prev = await matchupPreview(league.league_id, week, league, users, rosters, players, projFn, myRoster.roster_id, myTeamName);
     rows.push([league.name, prev.me.projected_total.toFixed(2), prev.opponent.team_name||'—', prev.opponent.projected_total.toFixed(2)]);
   }));
-  // sort by my projected total desc
   rows.sort((a,b)=> parseFloat(b[1]) - parseFloat(a[1]));
   return rows;
 }
@@ -349,40 +340,42 @@ function userSummaryByeCount(leagues, players, season, week){
     }
     rows.push([league.name, total]);
   }
-  // sort by total desc
   rows.sort((a,b)=> b[1]-a[1]);
   return rows;
 }
 async function renderUserSummary(){
+  // Hide league views; show summary
+  $('#leagueViews').classList.add('hidden');
   $('#userSummary').classList.remove('hidden');
-  $('#leagueTabs').classList.add('hidden');
+  // remove context text entirely in summary
+  $('#contextNote').textContent = '';
 
   const week = +($('#weekSelect').value||1);
-  const seasonSel = +($('#seasonMain').value||2024);
+  const seasonSel = +($('#seasonMain').value||2025);
 
-  // who to root for
+  // Who to Root For
   const ex = exposuresAcrossLeagues(g.leagues, g.userId, g.players);
   const rootRows = ex.map(r=>[r.name, r.pos, r.team, r.count]);
   renderSortableTable($('#usRootTable'), ['Player','Pos','Team','Leagues'], rootRows, ['str','str','str','num']);
 
-  // projections
+  // Projections
   $('#usProjTable').innerHTML = '<div class="note">Calculating projections…</div>';
   const projRows = await userSummaryProjections(g.leagues, g.players, week);
   renderTable($('#usProjTable'), ['League','My Proj','Opponent','Opp Proj'], projRows);
 
-  // bye count
+  // Bye Count
   const byeRows = userSummaryByeCount(g.leagues, g.players, seasonSel, week).map(r=>[r[0], r[1]]);
   renderTable($('#usByeTable'), ['League','Players on Bye (W'+week+')'], byeRows);
 }
 
 /* ===== App state & wiring ===== */
-let g={players:null,userId:null,leagues:{},selected:null, mode:'summary'}; // mode: 'summary' | 'league'
+let g={players:null,userId:null,leagues:{},selected:null, mode:'summary'};
 
 function setWeekOptions(){ const wk=$('#weekSelect'); wk.innerHTML=''; for(let w=1; w<=18; w++){ const o=el('option',{value:String(w),html:'Week '+w}); if(w===1) o.selected=true; wk.append(o); } }
 function showControls(){ $('#seasonGroup').classList.remove('hidden'); $('#weekGroup').classList.remove('hidden'); }
 function resetMain(){
-  $('#leagueTabs').classList.add('hidden'); $('#userSummary').classList.add('hidden');
-  $('#contextNote').textContent='No data loaded.';
+  $('#leagueViews').classList.add('hidden'); $('#userSummary').classList.add('hidden');
+  $('#contextNote').textContent='';
   $('#rosterTable').innerHTML=''; $('#posTable').innerHTML=''; $('#matchupSummary').innerHTML=''; $('#myStarters').innerHTML=''; $('#oppStarters').innerHTML=''; $('#byeMatrix').innerHTML='';
   $('#usRootTable').innerHTML=''; $('#usProjTable').innerHTML=''; $('#usByeTable').innerHTML='';
 }
@@ -398,7 +391,10 @@ function renderLeagueList(active=null){
     const myUser = users?.find?.(u=>u.user_id===myRoster?.owner_id) || {};
     const myTeamName = (myUser.metadata?.team_name)||myUser.display_name||`Team ${myRoster?.roster_id ?? ''}`;
     const item = el('div',{class:'league-item'+(id===active?' active':''), 'data-id':id},[
-      el('div',{},[ el('div',{class:'li-title', html: league?.name || `League ${id}`}), el('div',{class:'li-sub', html: myTeamName?`My team: ${myTeamName}`:'Click to view'}) ])
+      el('div',{},[
+        el('div',{class:'li-title', html: league?.name || `League ${id}`}),
+        el('div',{class:'li-sub', html: myTeamName || ''})  /* just team name, no prefix */
+      ])
     ]);
     item.addEventListener('click', async ()=>{
       g.mode='league'; g.selected=id;
@@ -417,23 +413,27 @@ async function renderSelectedLeague(){
   const myRoster = rosters.find(r=>r.owner_id===g.userId) || rosters[0];
   const myUser = users.find(u=>u.user_id===myRoster.owner_id) || {};
   const myTeamName = (myUser.metadata?.team_name)||myUser.display_name||`Team ${myRoster.roster_id}`;
+
   // Roster
   renderRoster($('#rosterTable'), myRoster, g.players, season);
+
   // Projections
   const scoring=league.scoring_settings||{}; const proj = await projByPid(season, week, 'regular', g.players, scoring); const projFn = pid => proj[String(pid)]||0;
   const vals= rosters.reduce((acc,r)=>{ acc[r.roster_id]=teamPosValues(league, rosterRows(r,g.players,projFn)); return acc; },{});
   const mine=vals[myRoster.roster_id]; const posStats={}; for(const pos of ['QB','RB','WR','TE','FLEX','SUPER_FLEX']){ const list=rosters.map(r=> vals[r.roster_id][pos]||0 ); const my=list[rosters.findIndex(r=>r.roster_id===myRoster.roster_id)]; const {rank,out_of,pct}=rankPct(list,my); posStats[pos]={my_value:+my.toFixed(2), rank, out_of, percentile:pct}; }
   renderPos($('#posTable'), posStats);
+
   // Matchup
-  const prev = await (async ()=>{ 
-    const p = await matchupPreview(league.league_id, week, league, users, rosters, g.players, projFn, myRoster.roster_id, myTeamName);
-    return p;
-  })();
+  const prev = await matchupPreview(league.league_id, week, league, users, rosters, g.players, projFn, myRoster.roster_id, myTeamName);
   renderMatchup($('#matchupSummary'), $('#myStarters'), $('#oppStarters'), prev);
+
   // Bye matrix
   renderBye($('#byeMatrix'), byeMatrix(myRoster, g.players, season));
-  // Show league UI
-  $('#userSummary').classList.add('hidden'); $('#leagueTabs').classList.remove('hidden'); showControls();
+
+  // Show league UI, hide summary UI
+  $('#userSummary').classList.add('hidden');
+  $('#leagueViews').classList.remove('hidden');
+  // show league name only (no summary text)
   $('#contextNote').textContent = `${league.name} • ${league.season}`;
 }
 
@@ -442,7 +442,6 @@ $('#username').addEventListener('input', ()=>{ $('#viewLeaguesBtn').disabled = !
 $('#manualLeagueId').addEventListener('input', ()=>{ $('#addLeagueBtn').disabled = !$('#manualLeagueId').value.trim(); });
 $('#weekSelect').addEventListener('change', async ()=>{ if(g.mode==='summary') await renderUserSummary(); else await renderSelectedLeague(); });
 $('#seasonMain').addEventListener('change', async ()=>{
-  // reload leagues for this season if user loaded
   if(!g.userId) return;
   renderStatus('', 'Reloading leagues for selected season…');
   try{
@@ -466,14 +465,13 @@ $('#viewLeaguesBtn').addEventListener('click', async ()=>{
     if(!uid){ renderStatus('err', `Couldn’t find a Sleeper account for “${uname}”.`); return; }
     g.userId = uid;
 
-    const season=$('#seasonMain').value; // season is now in center controls
+    const season=$('#seasonMain').value; // default is 2025
     const leagues = await loadMyLeagues(uid, season);
     if(!Array.isArray(leagues) || leagues.length===0){ renderStatus('err', `No leagues found in ${season}. Try a different season.`); $('#leagueList').innerHTML=''; return; }
 
     g.leagues = {};
     await Promise.all(leagues.map(async L => { g.leagues[L.league_id] = await loadLeagueBundle(L.league_id); }));
 
-    // Show controls + summary entry
     setWeekOptions(); showControls();
     const sm = $('#summaryItem'); sm.classList.remove('hidden'); sm.classList.add('active');
     sm.onclick = async ()=>{ g.mode='summary'; g.selected=null; document.querySelectorAll('.league-item').forEach(n=>n.classList.remove('active')); sm.classList.add('active'); await renderUserSummary(); };
@@ -481,12 +479,12 @@ $('#viewLeaguesBtn').addEventListener('click', async ()=>{
     renderStatus('ok', `Loaded ${leagues.length} league(s).`);
     renderLeagueList();
 
-    // Default to User Summary
     g.mode='summary'; await renderUserSummary();
-    $('#contextNote').textContent = `User Summary • ${season} • Week ${$('#weekSelect').value||1}`;
+    // no context text on summary
+    $('#contextNote').textContent = '';
   }catch(err){
     console.error(err);
-    renderStatus('err', `Failed to load leagues. If you opened this file directly, try a local server (CORS).`);
+    renderStatus('err', `Failed to load leagues.`);
   }
 });
 
@@ -499,21 +497,20 @@ $('#addLeagueBtn').addEventListener('click', async ()=>{
 });
 
 // Tab switching (per-league tabs)
-for(const b of document.querySelectorAll('#leagueTabs .tab-btn')){
-  b.addEventListener('click', ()=>{
-    document.querySelectorAll('#leagueTabs .tab-btn').forEach(x=>x.classList.remove('active'));
-    b.classList.add('active');
-    const id=b.dataset.tab; document.querySelectorAll('.sections > section').forEach(s=>s.classList.toggle('active', s.id===id));
-  });
-}
+document.addEventListener('click', (e)=>{
+  const btn = e.target.closest('#leagueTabs .tab-btn'); if(!btn) return;
+  document.querySelectorAll('#leagueTabs .tab-btn').forEach(x=>x.classList.remove('active'));
+  btn.classList.add('active');
+  const id=btn.dataset.tab; document.querySelectorAll('#leagueSections > section').forEach(s=>s.classList.toggle('active', s.id===id));
+});
+
 // Tab switching (user summary tabs)
-for(const b of document.querySelectorAll('#usTabs .tab-btn')){
-  b.addEventListener('click', ()=>{
-    document.querySelectorAll('#usTabs .tab-btn').forEach(x=>x.classList.remove('active'));
-    b.classList.add('active');
-    const id=b.dataset.tab; document.querySelectorAll('#userSummary .sections > section').forEach(s=>s.classList.toggle('active', s.id===id));
-  });
-}
+document.addEventListener('click', (e)=>{
+  const btn = e.target.closest('#usTabs .tab-btn'); if(!btn) return;
+  document.querySelectorAll('#usTabs .tab-btn').forEach(x=>x.classList.remove('active'));
+  btn.classList.add('active');
+  const id=btn.dataset.tab; document.querySelectorAll('#userSummary .sections > section').forEach(s=>s.classList.toggle('active', s.id===id));
+});
 
 /* init */
 setWeekOptions(); resetMain();
