--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
 
   .note{color:#8fa1ff88;font-size:13px;margin-top:8px}
   footer{color:#8fa1ff55;font-size:12px;margin:16px 0 8px}
+
+  /* welcome panel */
+  .welcome{flex:1; display:flex; align-items:center; justify-content:center; min-height:56vh; gap:18px; padding:12px}
+  .welcome .bot{flex:0 0 auto}
+  .welcome .bot svg{width:110px; height:110px; filter:drop-shadow(0 6px 16px rgba(0,0,0,.35))}
+  .welcome .bubble{background:#0e1734; border:1px solid var(--border); border-radius:14px; padding:14px 16px; max-width:560px}
+  .welcome .bubble .hi{font-weight:700; margin-bottom:6px}
+  .welcome .bubble .msg{color:#c9d3ffcc}
+  .welcome .bubble:after{content:""; position:relative; display:inline-block; width:0; height:0; border-top:8px solid transparent; border-bottom:8px solid transparent; border-right:8px solid var(--border); margin-left:-8px; margin-right:8px}
 </style>
 </head>
 <body>
@@ -107,7 +116,6 @@
       <div class="group" style="min-width:260px">
         <div class="note" id="contextNote"></div>
       </div>
-
       <div class="group hidden" id="seasonGroup">
         <label for="seasonMain">Season</label>
         <select id="seasonMain">
@@ -115,10 +123,41 @@
           <option value="2024">2024</option>
         </select>
       </div>
-
       <div class="group hidden" id="weekGroup">
         <label for="weekSelect">Week</label>
         <select id="weekSelect"></select>
+      </div>
+    </div>
+
+    <!-- friendly welcome panel (shown until a summary/league is rendered) -->
+    <div id="welcome" class="welcome">
+      <div class="bot" aria-hidden="true">
+        <!-- simple inline SVG robot -->
+        <svg viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" role="img">
+          <defs>
+            <linearGradient id="g" x1="0" x2="1">
+              <stop offset="0" stop-color="#5ee0ff"/><stop offset="1" stop-color="#84ffb5"/>
+            </linearGradient>
+          </defs>
+          <!-- antenna -->
+          <circle cx="60" cy="14" r="6" fill="url(#g)"/>
+          <rect x="58" y="20" width="4" height="8" rx="2" fill="#5ee0ff"/>
+          <!-- head -->
+          <rect x="28" y="30" width="64" height="40" rx="10" fill="#0f1a3a" stroke="#2a3a72"/>
+          <circle cx="46" cy="48" r="6" fill="#5ee0ff"/>
+          <circle cx="74" cy="48" r="6" fill="#5ee0ff"/>
+          <rect x="44" y="60" width="32" height="3" rx="1.5" fill="#24346b"/>
+          <!-- body -->
+          <rect x="34" y="74" width="52" height="28" rx="8" fill="#0f1a3a" stroke="#2a3a72"/>
+          <rect x="48" y="80" width="24" height="16" rx="4" fill="#14224a"/>
+          <!-- arms -->
+          <rect x="18" y="78" width="12" height="8" rx="4" fill="#14224a"/>
+          <rect x="90" y="78" width="12" height="8" rx="4" fill="#14224a"/>
+        </svg>
+      </div>
+      <div class="bubble">
+        <div class="hi">Hi, I’m your personal fantasy football agent 🤖</div>
+        <div class="msg">Enter your <b>Sleeper Username</b> on the left to see everything about your leagues. Let’s get some Ws!</div>
       </div>
     </div>
 
@@ -136,7 +175,7 @@
       </div>
     </div>
 
-    <!-- LEAGUE VIEWS (tabs + sections wrapped so we can hide all on summary) -->
+    <!-- LEAGUE VIEWS -->
     <div id="leagueViews" class="hidden">
       <div class="tabs" id="leagueTabs">
         <button class="tab-btn active" data-tab="tab-roster">My Roster</button>
@@ -144,7 +183,6 @@
         <button class="tab-btn" data-tab="tab-matchup">Opponent Projections</button>
         <button class="tab-btn" data-tab="tab-byes">Bye Week Matrix</button>
       </div>
-
       <div class="sections" id="leagueSections">
         <section id="tab-roster" class="active"><div id="rosterTable"></div></section>
         <section id="tab-pos"><div id="posTable"></div></section>
@@ -344,26 +382,23 @@ function userSummaryByeCount(leagues, players, season, week){
   return rows;
 }
 async function renderUserSummary(){
-  // Hide league views; show summary
+  // hide welcome and league views; show summary
+  $('#welcome').classList.add('hidden');
   $('#leagueViews').classList.add('hidden');
   $('#userSummary').classList.remove('hidden');
-  // remove context text entirely in summary
   $('#contextNote').textContent = '';
 
   const week = +($('#weekSelect').value||1);
   const seasonSel = +($('#seasonMain').value||2025);
 
-  // Who to Root For
   const ex = exposuresAcrossLeagues(g.leagues, g.userId, g.players);
   const rootRows = ex.map(r=>[r.name, r.pos, r.team, r.count]);
   renderSortableTable($('#usRootTable'), ['Player','Pos','Team','Leagues'], rootRows, ['str','str','str','num']);
 
-  // Projections
   $('#usProjTable').innerHTML = '<div class="note">Calculating projections…</div>';
   const projRows = await userSummaryProjections(g.leagues, g.players, week);
   renderTable($('#usProjTable'), ['League','My Proj','Opponent','Opp Proj'], projRows);
 
-  // Bye Count
   const byeRows = userSummaryByeCount(g.leagues, g.players, seasonSel, week).map(r=>[r[0], r[1]]);
   renderTable($('#usByeTable'), ['League','Players on Bye (W'+week+')'], byeRows);
 }
@@ -375,12 +410,14 @@ function setWeekOptions(){ const wk=$('#weekSelect'); wk.innerHTML=''; for(let w
 function showControls(){ $('#seasonGroup').classList.remove('hidden'); $('#weekGroup').classList.remove('hidden'); }
 function resetMain(){
   $('#leagueViews').classList.add('hidden'); $('#userSummary').classList.add('hidden');
+  // show welcome when nothing selected
+  $('#welcome').classList.remove('hidden');
   $('#contextNote').textContent='';
   $('#rosterTable').innerHTML=''; $('#posTable').innerHTML=''; $('#matchupSummary').innerHTML=''; $('#myStarters').innerHTML=''; $('#oppStarters').innerHTML=''; $('#byeMatrix').innerHTML='';
   $('#usRootTable').innerHTML=''; $('#usProjTable').innerHTML=''; $('#usByeTable').innerHTML='';
 }
 
-/* sidebar list */
+/* sidebar */
 function renderLeagueList(active=null){
   const list=$('#leagueList'); list.innerHTML='';
   const ids=Object.keys(g.leagues);
@@ -393,7 +430,7 @@ function renderLeagueList(active=null){
     const item = el('div',{class:'league-item'+(id===active?' active':''), 'data-id':id},[
       el('div',{},[
         el('div',{class:'li-title', html: league?.name || `League ${id}`}),
-        el('div',{class:'li-sub', html: myTeamName || ''})  /* just team name, no prefix */
+        el('div',{class:'li-sub', html: myTeamName || ''})
       ])
     ]);
     item.addEventListener('click', async ()=>{
@@ -409,31 +446,27 @@ function renderLeagueList(active=null){
 /* render selected league */
 async function renderSelectedLeague(){
   const id=g.selected; if(!id) return;
+  // hide welcome; show league views
+  $('#welcome').classList.add('hidden');
   const {league, users, rosters} = g.leagues[id]; const season=+league.season; const week=+($('#weekSelect').value||1);
   const myRoster = rosters.find(r=>r.owner_id===g.userId) || rosters[0];
   const myUser = users.find(u=>u.user_id===myRoster.owner_id) || {};
   const myTeamName = (myUser.metadata?.team_name)||myUser.display_name||`Team ${myRoster.roster_id}`;
 
-  // Roster
   renderRoster($('#rosterTable'), myRoster, g.players, season);
 
-  // Projections
   const scoring=league.scoring_settings||{}; const proj = await projByPid(season, week, 'regular', g.players, scoring); const projFn = pid => proj[String(pid)]||0;
   const vals= rosters.reduce((acc,r)=>{ acc[r.roster_id]=teamPosValues(league, rosterRows(r,g.players,projFn)); return acc; },{});
   const mine=vals[myRoster.roster_id]; const posStats={}; for(const pos of ['QB','RB','WR','TE','FLEX','SUPER_FLEX']){ const list=rosters.map(r=> vals[r.roster_id][pos]||0 ); const my=list[rosters.findIndex(r=>r.roster_id===myRoster.roster_id)]; const {rank,out_of,pct}=rankPct(list,my); posStats[pos]={my_value:+my.toFixed(2), rank, out_of, percentile:pct}; }
   renderPos($('#posTable'), posStats);
 
-  // Matchup
   const prev = await matchupPreview(league.league_id, week, league, users, rosters, g.players, projFn, myRoster.roster_id, myTeamName);
   renderMatchup($('#matchupSummary'), $('#myStarters'), $('#oppStarters'), prev);
 
-  // Bye matrix
   renderBye($('#byeMatrix'), byeMatrix(myRoster, g.players, season));
 
-  // Show league UI, hide summary UI
   $('#userSummary').classList.add('hidden');
   $('#leagueViews').classList.remove('hidden');
-  // show league name only (no summary text)
   $('#contextNote').textContent = `${league.name} • ${league.season}`;
 }
 
@@ -467,7 +500,7 @@ $('#viewLeaguesBtn').addEventListener('click', async ()=>{
 
     const season=$('#seasonMain').value; // default is 2025
     const leagues = await loadMyLeagues(uid, season);
-    if(!Array.isArray(leagues) || leagues.length===0){ renderStatus('err', `No leagues found in ${season}. Try a different season.`); $('#leagueList').innerHTML=''; return; }
+    if(!Array.isArray(leagues) || leagues.length===0){ renderStatus('err', `No leagues found in ${season}.`); $('#leagueList').innerHTML=''; return; }
 
     g.leagues = {};
     await Promise.all(leagues.map(async L => { g.leagues[L.league_id] = await loadLeagueBundle(L.league_id); }));
@@ -480,7 +513,6 @@ $('#viewLeaguesBtn').addEventListener('click', async ()=>{
     renderLeagueList();
 
     g.mode='summary'; await renderUserSummary();
-    // no context text on summary
     $('#contextNote').textContent = '';
   }catch(err){
     console.error(err);
