--- a/index.html
+++ b/index.html
@@ -147,57 +147,58 @@
     <div id="leagueList" class="league-list"></div>
   </aside>
 
-  <div class="main">
-    <div class="controls">
-      <div class="group" style="min-width:260px"><div class="note" id="contextNote"></div></div>
-      <div class="group hidden" id="seasonGroup">
-        <label for="seasonMain">Season</label>
-        <select id="seasonMain">
-          <option value="2025" selected>2025</option>
-          <option value="2024">2024</option>
-        </select>
-      </div>
-      <div class="group hidden" id="weekGroup">
-        <label for="weekSelect">Week</label>
-        <select id="weekSelect"></select>
-      </div>
-    </div>
+ <div class="controls">
+  <div class="group" style="min-width:260px"><div class="note" id="contextNote"></div></div>
+  <div class="group hidden" id="seasonGroup">
+    <label for="seasonMain">Season</label>
+    <select id="seasonMain">
+      <option value="2025" selected>2025</option>
+      <option value="2024">2024</option>
+    </select>
+  </div>
+  <div class="group hidden" id="weekGroup">
+    <label for="weekSelect">Week</label>
+    <select id="weekSelect"></select>
+  </div>
+</div>
 
-    <div id="userSummary" class="hidden">
-      <div class="tabs" id="usTabs">
-        <button class="tab-btn active" data-tab="us-root">Who to Root For</button>
-        <button class="tab-btn" data-tab="us-proj">Projections</button>
-        <button class="tab-btn" data-tab="us-byes">Bye Count</button>
-      </div>
-      <div class="sections">
-        <section id="us-root" class="active"><div id="usRootTable"></div></section>
-        <section id="us-proj"><div id="usProjTable"></div></section>
-        <section id="us-byes"><div id="usByeTable"></div></section>
-      </div>
-    </div>
+<!-- USER SUMMARY (default view after Continue) -->
+<div id="userSummary" class="hidden">
+  <div class="tabs" id="usTabs">
+    <button class="tab-btn active" data-tab="us-root">Who to Root For</button>
+    <button class="tab-btn" data-tab="us-proj">Projections</button>
+    <button class="tab-btn" data-tab="us-byes">Bye Count</button>
+  </div>
+  <div class="sections">
+    <section id="us-root" class="active"><div id="usRootTable"></div></section>
+    <section id="us-proj"><div id="usProjTable"></div></section>
+    <section id="us-byes"><div id="usByeTable"></div></section>
+  </div>
+</div>
 
-    <div id="leagueViews" class="hidden">
-      <div class="tabs" id="leagueTabs">
-        <button class="tab-btn active" data-tab="tab-roster">My Roster</button>
-        <button class="tab-btn" data-tab="tab-pos">Team Projections</button>
-        <button class="tab-btn" data-tab="tab-matchup">Opponent Projections</button>
-        <button class="tab-btn" data-tab="tab-byes">Bye Week Matrix</button>
+<!-- LEAGUE VIEWS -->
+<div id="leagueViews" class="hidden">
+  <div class="tabs" id="leagueTabs">
+    <button class="tab-btn active" data-tab="tab-roster">My Roster</button>
+    <button class="tab-btn" data-tab="tab-pos">Team Projections</button>
+    <button class="tab-btn" data-tab="tab-matchup">Opponent Projections</button>
+    <button class="tab-btn" data-tab="tab-byes">Bye Week Matrix</button>
+  </div>
+  <div class="sections" id="leagueSections">
+    <section id="tab-roster" class="active"><div id="rosterTable"></div></section>
+    <section id="tab-pos"><div id="posTable"></div></section>
+    <section id="tab-matchup">
+      <div id="matchupSummary"></div>
+      <div class="row" style="margin-top:8px">
+        <div id="myStarters"></div>
+        <div id="oppStarters"></div>
       </div>
-      <div class="sections" id="leagueSections">
-        <section id="tab-roster" class="active"><div id="rosterTable"></div></section>
-        <section id="tab-pos"><div id="posTable"></div></section>
-        <section id="tab-matchup">
-          <div id="matchupSummary"></div>
-          <div class="row" style="margin-top:8px">
-            <div id="myStarters"></div>
-            <div id="oppStarters"></div>
-          </div>
-        </section>
-        <section id="tab-byes"><div id="byeMatrix"></div></section>
-      </div>
-    </div>
+    </section>
+    <section id="tab-byes"><div id="byeMatrix"></div></section>
+  </div>
+</div>
 
-    <footer>Uses public Sleeper API + Rotowire projections via Sleeper. Data cached for ~3h in localStorage.</footer>
+<footer>Uses public Sleeper API + Rotowire projections via Sleeper. Data cached for ~3h in localStorage.</footer>
   </div>
 </div>
 
