--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <button id="landingGo" disabled>Continue</button>
     </div>
     <div class="muted-mini">We’ll fetch your leagues once you continue.</div>
-    <div class="muted-mini footer-mini"> <a href="https://www.linkedin.com/in/aryan-shah/" target="_blank" rel="noopener">Meet the creator</a> </div>
+    <div class="muted-mini footer-mini"> <a href="https://www.linkedin.com/in/aryan-shah/" target="_blank" rel="noopener">Connect with the Creator</a> </div>
   </div>
 </div>
 
@@ -219,7 +219,7 @@
     <footer>
       Uses public Sleeper API + Rotowire projections via Sleeper. Data cached for ~3h in localStorage.
       <div class="footer-mini" style="margin-top:6px">
-        <a href="https://www.linkedin.com/in/aryan-shah/" target="_blank" rel="noopener">Meet the creator</a>
+        <a href="https://www.linkedin.com/in/aryan-shah/" target="_blank" rel="noopener">Connect with the Creator</a>
       </div>
     </footer>
   </div>
@@ -229,3 +229,4 @@
 <script src="app.js" defer></script>
 </body>
 </html>
+
